load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/Kami-no/goblin
gazelle(name = "gazelle")

go_library(
    name = "goblin_lib",
    srcs = ["main.go"],
    importpath = "github.com/Kami-no/goblin",
    visibility = ["//visibility:private"],
    deps = [
        "@org_golang_x_net//http2:go_default_library",
        "@org_golang_x_net//http2/h2c:go_default_library",
    ],
)

go_binary(
    name = "goblin",
    embed = [":goblin_lib"],
    visibility = ["//visibility:public"],
)
